--- a/src/app/all-questions/all-questions.component.html
+++ b/src/app/all-questions/all-questions.component.html
@@ -1,96 +1,27 @@
 <div class="conteiner">
 <div class="nav">
-	<nav>
-		<a href=""><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
+<!--<a href=""><i class="fa fa-chevron-left" aria-hidden="true"></i></a>---->
+	<nav class="filters">
+	<ul>
+	<!--	<li><input type="radio">My shelf></li>
+		<li><input type="radio">All questions></li> -->
+	</ul>
+	</nav>
+	<nav class="sort">
+	<ul>
+	<!--<li>Recent</li>
+		<li>Hot</li>-->
+	</ul>
+	</nav>
+	<nav class="serach">
+	<ul>
+		<li class="search-questions"></li>
+		<search class="search-questions" (update)="term = $event"></search>
+		<li class="search-btn"><input class="search-btn-submit" type="submit" value="Search"></li>
+	</ul>
 	</nav>
 </div>
-<div class="main-question">
-	<div class="profile-name">
-	<h1><a [routerLink]="['profile']">
-	Eva
-	</a></h1>
-	</div>
-	<div class="wrapper">
-		<a [routerLink]="['profile']"><div class="main-image">
-
-		</div></a>
-		<div class="header">
-			<a [routerLink]="['singlequestion']"><h2>WILL INSULINE KILL EVERYBODY ON EARTH</h2></a>
-		</div>
-		<article class="activities">
-			<div class="activities-wrapper">
-			<ul>
-			<!--	<li>
-				<div class="asked">
-					
-				</div>
-				</li>
-				.-->
-				<li>
-				<div class="more-activities">
-					<div class="more-activities-wrapper">
-					<div class="activities-number"><h3>3</h3></div>
-					<h4>more activities</h4>
-					</div>
-				</div>
-				</li>
-				<li>
-				<div class="commented first-commented">
-					<div class="commented-wrapper">
-						<div class="image-wrapper"><div class="user-image"></div></div>
-						<div class="commented-header">COMMENTED</div>
-						<div class="bottom-circle"></div>
-					</div>
-				</div>
-				</li>
-				<li>
-				<div class="commented second-commented">
-					<div class="commented-wrapper">
-						<div class="image-wrapper"><div class="user-image"></div></div>
-						<div class="commented-header">COMMENTED</div>
-						<div class="bottom-circle"></div>
-					</div>
-				</div>
-				</li>
-				<li>
-				<div class="commented third-commented">
-					<div class="commented-wrapper">
-						<div class="image-wrapper"><div class="user-image"></div></div>
-						<div class="commented-header">COMMENTED</div>
-						<div class="bottom-circle"></div>
-					</div>
-				</div>
-				</li>
-				<li>
-				<div class="commented fourth-commented">
-					<div class="commented-wrapper">
-						<div class="image-wrapper"><div class="user-image"></div></div>
-						<div class="commented-header">COMMENTED</div>
-						<div class="bottom-circle"></div>
-					</div>
-				</div>
-				</li>
-			</ul>
-			</div>
-		</article>
-		
-		<div class="more-info">
-			<div class="more-info-discussion">
-				<h5>2</h5>
-				<h5>related discussion</h5>
-			</div>
-			<div class="more-info-involved">
-				<h5>6</h5>
-				<h5>peers involved</h5>
-			</div>
-			<div class="more-info-conversation">
-				<h5>3</h5>
-				<h5>conversation</h5>
-			</div>
-		</div>
-	
-	</div>
-</div>
+<question [term]="term"></question>
 <div class="aswear">
 </div>
 </div>
